# CPP_Pruefung_Sven_Flori

./: .gitignore  BuildOpenCV.md  CMakeLists.txt  ClassDiagram_UML.uxf  Class_Diagram.mmd  README.md  UML_Concept_for_Project.excalidraw  leaderboardCatchTheSquares.txt  leaderboardDodgeTheBalls.txt
inc/: Game.hpp  ball.hpp  ball1.hpp  catchTheSquares.hpp  catchTheSquaresMode.hpp  color.hpp  constants.hpp  dodgeTheBalls.hpp  dodgeTheBallsMode.hpp  drawBall.hpp  drawShape.hpp  game.hpp  gameModeInterface.hpp  gamemode.hpp  gui.hpp  leaderboard.hpp  menu.hpp  player.hpp  randomGenerator.hpp  shape.hpp  square.hpp
src/: Game.cpp  ball.cpp  catchTheSquares.cpp  catchTheSquaresMode.cpp  color.cpp  dodgeTheBalls.cpp  dodgeTheBallsMode.cpp  drawBall.cpp  drawShape.cpp  game.cpp  gameModeInterface.cpp  gamemode.cpp  gui.cpp  leaderboard.cpp  main.cpp  menu.cpp  player.cpp  shape.cpp  square.cpp
test/: gameTest.cpp
